version/0.16/_sources/api/solver/_autosummary/settings/geometry_1.rst.txt
:orphan:

.. _geometry_1:

geometry
========

.. autoclass:: ansys.fluent.core.solver.settings_232.geometry_1.geometry
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`geometry_child <geometry_child>`


.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`rotor_child <rotor_child>`       'child_object_type' of rotor.

================================   =================================

