version/0.20/_sources/api/solver/_autosummary/settings/geometry_1.rst.txt
:orphan:

.. _geometry_1:

geometry
========

.. autoclass:: ansys.fluent.core.solver.settings_241.geometry_1.geometry
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`geometry_child <geometry_child>`


.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`rotor_child <rotor_child>`       'child_object_type' of rotor.

================================   =================================

